# oakmeg-reportlib

./: .gitignore  MANIFEST.in  README.md  buildall  pyproject.toml  setup.cfg  setup.py
.github/workflows/: python-linter.yml
documentation/: .buildinfo  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  reportlib.html  search.html  searchindex.js
documentation/.doctrees/: environment.pickle  index.doctree  modules.doctree  reportlib.doctree
html/reportlib/: datamodule.html  index.html  maps.html  patterns_of_life.html  performance.html  plotly_utils.html  ppt.html  survey.html  utils.html
reportlib/: __init__.py  _plotly_utils.py  data.py  datamodule.py  maps.py  patterns_of_life.py  performance.py  ppt.py  survey.py  utils.py
sphinx/source/: conf.py  index.rst  modules.rst  reportlib.rst
