[tool.poetry]
name = "reportlib"
version = "0.1.0"
description = ""
authors = ["gaspardfeuvray <gaspard.feuvray@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7.1"
pandas = "^1.3.1"
Pillow = "^8.3.1"
folium = "^0.12.1"
psycopg2-binary = "^2.9.1"
SQLAlchemy = "^1.4.22"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools>=54"]
build-backend = "poetry.core.masonry.api"
