[tool.poetry]
name = "reportlib"
version = "0.2.2"
description = ""
authors = ["gaspardfeuvray <gaspard.feuvray@gmail.com>"]
include = ["html/reportlib/*.html"]

[tool.poetry.dependencies]
python = ">=3.7.1"
pandas = "^1.3.1"
Pillow = "^9.0.0"
folium = "^0.12.1"
psycopg2-binary = "^2.9.1"
SQLAlchemy = "^1.4.22"
plotly = "^5.2.1"
pygeohash = "^1.2.0"
psutil = "^5.8.0"
python-pptx = "^0.6.19"
pycountry = "^20.7.3"
haversine = "^2.4.0"
PyYAML = "^5.4.1"
geojson = "^2.5.0"

[tool.poetry.dev-dependencies]
pdoc3 = "^0.10.0"

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools>=54"]
build-backend = "poetry.core.masonry.api"
