
[metadata]
name = reportlib
version = 0.0.1
author = Gaspard Feuvray
author_email = gaspard.feuvray@gmail.com
description = Oakmeg reporting library
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MCS-Atom/oakmeg-reportlib
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True